# duck-dbt-demo

./: .gitignore  .user.yml  README.md  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml  pyproject.toml  warehouse.duckdb
models/_sources/: _sources.yml
models/base/: _base.yml  base_warehouse__products.sql
models/mart/: _mart.yml  mart_products__countries.sql  mart_products__products.sql  mart_products__versions.sql
tools/: build_schema.py
warehouse/: create.py
